Ajout bouton recherche

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	        <legend>Recherche cabane</legend>
                 <label for="code">Nom</label>
                 <input type="text" name="nom" id="nomCabane"/>
+                <button class="searchBtn">Rechercher</button>
             </fieldset>
         </form>
         
