--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Map - Cabanes</title>
         <link rel="stylesheet" type="text/css" href="css/css.css">
         <script type="text/javascript" src="js/config.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
         <script src="https://openlayers.org/en/v4.6.4/build/ol.js"></script>
         <script type="text/javascript">
         
