--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     </head>
     <body>
         <aside>
-            <fieldset id="info">
-	        <legend>Recherche cabane</legend>
-                <label for="code">Nom</label>
-                <input type="text" name="nom" id="nomCabane"/>
-                <button class="searchBtn">Rechercher</button>
-            </fieldset>
+            <div class="RechercheCabanes">
+                <fieldset>
+                    <legend>Recherche cabane</legend>
+                    <label for="code">Nom</label>
+                    <input type="text" name="nom" id="nomCabane"/>
+                    <button class="searchBtn">Rechercher</button>
+                </fieldset>
+            </div>
             <div class="results">
                 <div class="resTemplate"></div>
             </div>
-         
+
         </aside>
-            <div id="map"></div>
-            
- 
+        <div id="map"></div>
+
+
     </body>
 </html>
