--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Map - Cabanes</title>
         <link rel="stylesheet" type="text/css" href="css/css.css">
+        <script src="js/modernizr.js"></script>
         <script type="text/javascript" src="js/config.js"></script>
         <script src='https://unpkg.com/mapbox@1.0.0-beta9/dist/mapbox-sdk.min.js'></script>
         <script type="text/javascript" src="js/app.js"></script>
