Added charset meta, changed attribution

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Map - Cabanes</title>
+        <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/css.css">
         <script src="js/modernizr.js"></script>
         <script type="text/javascript" src="js/config.js"></script>
