--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     </head>
     <body>
+        <header>
+             <img src="img/cabane_titre.png"	alt="Hut finder logo" title="Hut finder logo" />
+        </header>
         <aside>
             <div class="RechercheCabanes">
                 <fieldset>
@@ -21,10 +24,9 @@
             <div class="results">
                 <div class="resTemplate"></div>
             </div>
-
+            
         </aside>
         <div id="map"></div>
-
 
     </body>
 </html>
