--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-             <img src="img/cabane_titre.png"	alt="Hut finder logo" title="Hut finder logo" />
+             <img src="img/titre.png"	alt="Hut finder logo" title="Hut finder logo" />
         </header>
         <aside>
             <div class="RechercheCabanes">
