--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <button class="searchBtn">Rechercher</button>
                 </fieldset>
             </div>
+            <button class="close">fermer</button>
             <div class="results">
                 <div class="resTemplate result"><a class="place" href="#"></div></div>
             </div>
