--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <header>
              <img src="img/titre.png"	alt="Hut finder logo" title="Hut finder logo" />
         </header>
+        <div class="icon"></div>
         <aside>
             <div class="RechercheCabanes">
                 <fieldset>
@@ -23,11 +24,10 @@
                 </fieldset>
             </div>
             <div class="results">
-                <div class="resTemplate result"><a class="place" href="#"></div></div>
+                <div class="resTemplate result"><a class="place" href="#"></a></div>
             </div>
 
         </aside>
         <div id="map"></div>
-
     </body>
 </html>
