--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/css.css">
   <script src="js/modernizr.js"></script>
-  <script type="text/javascript" src="js/config.js"></script>
+  <script src="js/config.js"></script>
   <script src='https://unpkg.com/mapbox@1.0.0-beta9/dist/mapbox-sdk.min.js'></script>
-  <script type="text/javascript" src="js/app.js"></script>
+  <script src="js/app.js"></script>
   </head>
 <body>
   <header>
