--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/css.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="http://openlayers.org/en/v4.6.4/build/ol-debug.js"></script>
+  <script src="https://openlayers.org/en/v4.6.4/build/ol-debug.js"></script>
   <script src='https://unpkg.com/mapbox@1.0.0-beta9/dist/mapbox-sdk.min.js'></script>
   <script src="js/modernizr.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
