--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Map - Cabanes</title>
+  <title>geoinfHutFinder</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://openlayers.org/en/v4.6.4/css/ol.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/css.css">
